# Predict

flask_ml_app/: Preprocessing-Data-set.xlsx  app.py  pyproject.toml  requirements.txt
flask_ml_app/model/: optimized_moisture_predictor.joblib
flask_ml_app/static/: style.css
flask_ml_app/templates/: index.html
