[tool.poetry]
name = "moisture-predictor"
version = "0.1.0"
description = "Flask ML web app"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
joblib = "^1.1.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"